--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   </head>
   <body>
     <p>#holaaa</p>
-    <a href="articulo.md">aaa</a>
+    <a href="articulo.md"><p>aaa</p></a>
   </body>
 </html>        
